@@ -9,6 +9,8 @@ Changes
 - Having the "Requires Python 3" error when setup.py runs messes with some
   tools, so I moved it to a custom install class instead.
 
+- Now includes a server-mode, that will serve the presentation via http.
+
 
 1.1 (2013-03-15)
 ----------------
